<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="General">
            <menu>
                <group android:checkableBehavior="single">
                    
                    <item
                        android:id="@+id/iConductor_Miperfil"
                        android:icon="@drawable/icon_perfil"
                        android:title="@string/mi_perfil"/>
                    <item
                        android:id="@+id/iConductor_Mensaje"
                        android:icon="@drawable/icon_mensaje"
                        android:title="@string/mensaje_3" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/iConductor_Cerrarsesion"
            android:icon="@drawable/icon_cerrar"
            android:title="@string/cerrar_sesion" />

    </group>
</menu>
