<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="com.katherineplazas.lab02.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:lines="1"
                android:text="@string/ejemplo_correo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.4"
            android:layout_margin="2dp">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iFoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:civ_border_width="2dp"

                android:src="@drawable/usuario"
                app:civ_border_color="@color/white"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:textSize="15dp"
            android:background="@color/silver"
            android:textColor="@color/black"
            android:text="@string/nombre"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:textSize="15dp"
            android:background="@color/silver"
            android:textColor="@color/black"
            android:text="@string/cedula"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="15dp"
            android:layout_margin="2dp"
            android:background="@color/silver"
            android:textColor="@color/black"
            android:text="@string/telefono"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/datosEst"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:background="@color/silver"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:text="@string/nombre"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:textSize="15dp"
            android:background="@color/silver"
            android:textColor="@color/black"
            android:text="@string/documento"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="15dp"
        android:layout_margin="2dp"
        android:background="@color/silver"
        android:textColor="@color/black"
        android:text="@string/colegio"
        android:gravity="center"
        android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="15dp"
            android:layout_margin="2dp"
            android:background="@color/silver"
            android:textColor="@color/black"
            android:text="@string/Rh"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>



</LinearLayout>
