<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.katherineplazas.lab02.Mensaje_Activity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="40sp"
        android:layout_weight="1"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="0.5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/notificaciones"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="bottom"
            android:text="@string/asunto"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@color/silver"
        android:layout_weight="0.5">

        <EditText
            android:id="@+id/eAsunto"
            android:textColorHint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textWebEmailAddress"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@color/silver"
        android:layout_weight="1">
        <EditText
            android:id="@+id/eMensaje"
            android:hint="@string/redactar_msn"
            android:textColorHint="@color/black"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="0.4">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="0.3">
        <Button
            android:id="@+id/bEnviarMensaje"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enviar"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:onClick="OnEnviarMensajeCLicked"
            android:background="@color/darkorange"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="0.7">
    </LinearLayout>

    </LinearLayout>

</LinearLayout>
